# LimboDB

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  constants.h  dbfile.db  limboDB_command_structure.txt  main.cpp
include/: btree.h  catalog_manager.h  disk_manager.h  index_manager.h  record_id.h  record_iterator.h  record_manager.h  table_manager.h
include/query/: query_parser.h
src/: btree.cpp  catalog_manager.cpp  disk_manager.cpp  index_manager.cpp  record_iterator.cpp  record_manager.cpp  table_manager.cpp
src/query/: query_parser.cpp
